# Scoria

./: .gitignore  CMakeLists.txt  COMMIT_CONVENTION.md  README.md  README_zh-CN.md  Scoria.cpp  Scoria.h  bench.c  hello.sco  test.sco
docs/: IR_DESIGN.md  SYNTAX.md
libscoria/: fasc.sco  io.sco  systema.sco
src/: main.c
src/backend/: asm_x86_64.c  asm_x86_64.h  builtins.c  builtins.h  pe_idata.c  pe_idata.h  pe_linker.c  pe_linker.h  reg_alloc.c  reg_alloc.h  x86_mir.c  x86_mir.h
src/frontend/: ast.h  lexer.c  lexer.h  parser.c  parser.h  token.h
src/ir/: ir_builder.c  ir_builder.h  ir_gen.c  ir_gen.h  ir_printer.c  ir_printer.h  sir.h
src/middleend/: symtab.c  symtab.h  type_checker.c  type_checker.h  types.c  types.h
src/utils/: logger.c  logger.h  memory_arena.c  memory_arena.h
tests/: demo.sco  fib.sco  main_multi.sco  math_lib.sco  militus.sco  omnis.sco  sqrtinv.sco  test_data.sco  test_etc.sco  test_float.sco  test_imago.sco  test_lege.sco  test_literals.sco  test_morere.sco  test_mori.sco  test_ordo.sco  test_scribe_omnis.sco  test_std.sco
